# rcarve

./: Cargo.toml  plan.txt
crates/rcarve/: Cargo.toml
crates/rcarve/src/: lib.rs  main.rs  pocket.rs  postprocessor.rs  profile.rs  project.rs  tool_library.rs  toolpath_generation.rs  types.rs  vcarve.rs
crates/rcarve/src/geometry/: curve.rs  ids.rs  mod.rs  offset.rs  region.rs  shape.rs
crates/rcarve/src/tests/: integration_test.rs
crates/rcarve/tests/: api_test.rs  error_test.rs  integration_test.rs  pocket_test.rs  postprocessor_test.rs  profile_test.rs  vcarve_test.rs
experiments/: main.py  pyproject.toml
mockup/: README.md  index.html  script.js  styles.css
rcarve-iced/: Cargo.toml  flake.nix
rcarve-iced/src/: main.rs
rcarve-iced/src/app/: canvas_view.rs  canvas_view_3d.rs  canvas_view_wgpu.rs  imports_panel.rs  mod.rs  operation_form.rs  operations_panel.rs  project.rs  stock_form.rs  tool_form.rs  tools_panel.rs  util.rs
