[package]
name = "rcarve"
version = "0.1.0"
edition = "2021"

[dependencies]
clipper2 = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
kurbo = { version = "0.12", features = ["serde"] }
usvg = "0.42"
tiny-skia-path = "0.11"
ulid = { version = "1.1", features = ["serde"] }
dirs = "5"
geo = "0.24"
cavalier_contours = "0.6.0"
centerline = "0.13.0"
glam = "0.30.9"
boostvoronoi = "0.11.1"
linestring = "0.15.0"

[dev-dependencies]

